<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">大地智联</string>

    <string name="repos">Repos</string>
    <string name="my">My</string>
    <string name="following">Following</string>
    <string name="events">Events</string>
    <string name="starred">Starred</string>
    <string name="followers">Followers</string>
    <string name="load_error">加载失败</string>
    <string name="reload">重新加载</string>
    <string name="loading">Loading…</string>
    <string name="load_error_click">Load failed , click retry</string>
    <string name="load_not_more">No more data</string>
    <string name="exit_go_out">再按一次退出</string>
    <string name="action">action:\t%s</string>
    <string name="max_font_num">198</string>

    <!--<string name="cancel">Cancel</string>-->
    <string name="enter">确定</string>
    <string name="logout_user">Exit the current user?</string>
    <string name="format_star">start: %s</string>
    <string name="format_fork">fork: %s</string>
    <string name="format_issues">issues: %s</string>
    <string name="format_update">update: %s</string>
    <string name="format_create">create: %s</string>
    <string name="net_time_out">Net time out</string>
    <string name="copy_success">复制成功</string>
    <string name="net_error">网络错误</string>

    <string name="hint_user">输入您的手机号码</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_new_password">请输入新密码</string>
    <string name="hint_identify_code">请输入验证码</string>
    <string name="login">登录</string>
    <string name="pwd_login">账号密码登录</string>
    <string name="forget_pwd">忘记密码</string>

    <string name="logout">退出登录</string>
    <string name="login_success">登录成功</string>
    <string name="get_code">获取验证码</string>
    <string name="input_user">请输入您的手机号</string>
<!--    <string name="publish_text">Copyright©2012–2020 \n海南丰达中天农业综合服务有限公司</string>-->
    <!--<string name="publish_text">Copyright©2012–2020 \n海南宝秀节水灌溉有限公司</string>-->
    <string name="publish_text">Copyright©2019–2020 \n海南威达节水灌溉工程有限公司</string>

    <string name="tab1">首页</string>
    <string name="tab2">泵站</string>
    <string name="tab3">阀控</string>
    <string name="tab4">计划</string>
    <string name="tab5">我的</string>

    <string name="head_photo">头像</string>
    <string name="nick_name">昵称</string>
    <string name="telephone">手机号</string>
    <string name="my_nickname">我的昵称</string>
    <string name="modify_nickname">修改昵称</string>
    <string name="hint_nickname">请输入昵称</string>

    <string name="my_account">我的账号</string>
    <string name="my_message">我的消息</string>
    <string name="my_farm">我的农场</string>
    <string name="help_feedback">帮助与反馈</string>
    <string name="about_us">关于我们</string>

    <string name="hint_edit_feedback">请输入您的意见</string>

    <string name="setting">设置</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="finish">完成</string>
    <string name="hint_input_phone">请输入手机号</string>
    <string name="hint_input_code">请输入验证码</string>
    <string name="hint_input_pwd">请输入密码</string>

    <string name="switch_farm">切换农场</string>
    <string name="add_farm">新建农场</string>
    <string name="edit_farm">农场编辑</string>
    <string name="add_massif">新建地块</string>

    <string name="farm_detail">农场详情</string>
    <string name="create_completion">创建完成</string>
    <string name="update_completion">编辑完成</string>

    <string name="version_check">版本检查</string>
    <string name="service_telephone_number">客服电话：400-028-0000</string>

    <string name="pressure_set">压力设置</string>

</resources>
