<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.baidu.mapapi.map.MapView
        android:id="@+id/mMapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/iv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/margin_5"
        android:src="@drawable/icon_location"
        android:background="@drawable/shape_round_gray"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="@dimen/margin_5"/>

    <ImageView
        android:id="@+id/iv_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:visibility="gone"
        android:src="@drawable/icon_list"/>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:visibility="invisible">
        <TextView
            android:id="@+id/tvMapHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_round_white"
            android:text="墒情图"
            android:textColor="@color/text_gray"
            android:textSize="12dp" />

    </FrameLayout>

    <!--<android.support.design.widget.CoordinatorLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/floating_menu"
        style="@style/menu_style"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:padding="10dp">
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_btn_switch_farm"
            style="@style/floating_buttons_small"
            app:fab_label="@string/switch_farm"
            android:src="@drawable/icon_switch_farm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_btn_add_farm"
            style="@style/floating_buttons_small"
            app:fab_label="@string/add_farm"
            android:src="@drawable/icon_farm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_btn_add_land"
            style="@style/floating_buttons_small"
            app:fab_label="@string/add_massif"
            android:src="@drawable/icon_land"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </com.github.clans.fab.FloatingActionMenu>

    <!--</android.support.design.widget.CoordinatorLayout>-->

</RelativeLayout>