<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/layout_common_title" />

    <View style="@style/h_view_style" />

    <RelativeLayout
        android:id="@+id/rl_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="@dimen/padding_15">

        <TextView
            style="@style/text_base_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/head_photo" />

        <ImageView
            android:id="@+id/more_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/arr_right" />

        <ImageView
            android:id="@+id/iv_head"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/more_icon"
            android:src="@drawable/defult_head_icon"
            android:visibility="visible" />
    </RelativeLayout>

    <View
        style="@style/h_view_style"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp" />

    <LinearLayout
        android:id="@+id/nick_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="@dimen/comm_margin">

        <TextView
            style="@style/text_base_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/nick_name" />

        <EditText
            android:id="@+id/et_nick_name"
            style="@style/edit_base_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="right"
            android:drawableRight="@drawable/arr_right"
            android:drawablePadding="@dimen/padding_15"/>
    </LinearLayout>


    <View
        style="@style/h_view_style"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/telephone"
        style="@style/my_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telephone" />

    <View style="@style/h_view_style" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/little_gray" />

</LinearLayout>



